# aicomm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  cliff.toml  test.rest
chat/: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml  env.example  homwork.md  test.rest
chat/ai_sdk/: Cargo.toml  openai.txt
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: ollama.rs  openai.rs
chat/analytics_server/: Cargo.toml  analytics.yml  build.rs
chat/analytics_server/examples/: sender.rs
chat/analytics_server/src/: config.rs  error.rs  events.rs  extractors.rs  handler.rs  lib.rs  main.rs  openapi.rs
chat/analytics_server/src/pb/: analytics.rs
chat/bot_server/: Cargo.toml  bot.yml
chat/bot_server/src/: config.rs  indexer.rs  lib.rs  notif.rs  server.rs
chat/chat_core/: Cargo.toml
chat/chat_core/src/: lib.rs
chat/chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat/chat_core/src/utils/: jwt.rs
chat/chat_server/: Cargo.toml  Makefile  test.rest
chat/chat_server/fixtures/: test.sql
chat/chat_server/src/: agent.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat/chat_server/src/handlers/: agent.rs  auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat/chat_server/src/middlewares/: chat.rs
chat/chat_server/src/models/: agent.rs  chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat/chat_test/: Cargo.toml  chat.yml  notify.yml
chat/chat_test/tests/: chat.rs
chat/migrations/: 20240601024902_initial.sql  20240622005536_triggers.sql  20240929125631_agent.sql  20241020063431_agent_adapter.sql  20241029121445_user_bot.sql
chat/notify_server/: Cargo.toml  index.html
chat/notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notifi.rs  sse.rs
chatapp/: cliff.toml  index.html  note.txt  package.json  pnpm-lock.yaml
chatapp/src/: App.vue  main.ts  types.ts  utils.ts  vite-env.d.ts
chatapp/src-tauri/: Cargo.toml  tauri.conf.json
chatapp/src-tauri/src/: lib.rs  main.rs
chatapp/src/analytics/: event.ts
chatapp/src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
chatapp/src/router/: index.ts
chatapp/src/stores/: authStore.ts
chatapp/src/views/: Chat.vue  Login.vue  Register.vue
fixtures/: analytics.yml  bot.yml  chat.yml  notify.yml
protos/: messages.proto
swiftide-pgvector/: .gitignore  Cargo.toml  README.md  deny.toml
swiftide-pgvector/examples/: indexer.rs  retriever.rs
swiftide-pgvector/src/: lib.rs  persist.rs  retrieve.rs
