[workspace]
resolver = "2"
members = [ "chat_core", "chat_server", "chat_test", "notify_server"]

[workspace.dependencies]
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
notify-server = { path = "./notify_server" }

anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["http2", "query", "tracing", "multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono" # 支持从数据库datetime反序列化到chrono类型
] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "rt", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = [
    "serde" # 支持chrono序列化和反序列化json
] }
argon2 = { version = "0.5.3", features = ["std"] }
# jwt-simple 设计比jwtwebtoken更好(不易出错) 把default-features去掉, 因为默认里面boring是Cpp写的, 编译很慢
jwt-simple = { version = "0.12.10", default-features = false, features = ["pure-rust"] }

serde_json = "1.0.128"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-full", "fs", "cors", "trace"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
futures = "0.3.30"
# 文档相关
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
