[package]
name = "analytics_server"
version = "0.1.0"
edition = "2021"

[dependencies]
chat-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-rapidoc = { workspace = true }

prost = "0.13.3"
prost-types = "0.13.3"
clickhouse = { version = "0.13.1", features = ["rustls-tls", "time"] }
axum-extra = { workspace = true }
async-trait = "0.1.83"
futures-util = "0.3.31"

[build-dependencies]
anyhow = { workspace = true }
prost-build = "0.13.3"
proto-builder-trait = { version = "0.6.2", features = ["prost"] }

[dev-dependencies]
chrono.workspace = true
clickhouse = { version = "0.13.1", features = ["rustls-tls", "time", "test-util"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
