[package]
name = "bot-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bot"
path = "src/server.rs"

[[bin]]
name = "indexer"
path = "src/indexer.rs"

[dependencies]
chat-core = { workspace = true }

anyhow = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }


swiftide = { version = "0.13.4", features = ["fastembed", "ollama", "tree-sitter", "openai"] }
swiftide-pgvector = { workspace = true }

serde_yaml = { workspace = true }
