[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-core = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
jwt-simple = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum-extra = { workspace = true }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.4"

http-body-util = { version = "0.1.1", optional = true }
sqlx-db-tester = { version = "0.4.2", optional = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }

[features]
default = []
test-util = [
    "http-body-util",
    "sqlx-db-tester"
]

[dev-dependencies]
# sqlx-db-tester = { workspace = true } workspace 不支持 dev-dependencies，所以只能单独引入到crate中
# http-body-util = "0.1.1"
# sqlx-db-tester = "0.4.2" 由于被设计为 features test-util 使用，所以要加上 optional = true, 并且要加入到 dependencies (dev-dependencies不能被外部的crate使用)

chat-server = { workspace = true, features = ["test-util"] } # 给自己使用 test-util
